--- a/Catalog_Service_API/Catalog_Service_API.csproj
+++ b/Catalog_Service_API/Catalog_Service_API.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Catalog_Service_Application\Catalog_Service_Application.csproj" />
     <ProjectReference Include="..\Catalog_Service_Infrastructure\Catalog_Service_Infrastructure.csproj" />
   </ItemGroup>
 
