--- a/Catalog_Service_Application/Catalog_Service_Application.csproj
+++ b/Catalog_Service_Application/Catalog_Service_Application.csproj
@@ -7,25 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Categories\Commands\" />
-    <Folder Include="Categories\Queries\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Products\Commands\SetMainImageCommand\" />
-    <Folder Include="Products\Commands\UploadImageCommand\" />
-    <Folder Include="Products\Commands\UpdateProductCommand\" />
-    <Folder Include="Products\Commands\AddStockQuantityRequestCommand\" />
-    <Folder Include="Products\Commands\InsertProductCommand\" />
-    <Folder Include="Products\Queries\GetProductsByCurserQuery\" />
-    <Folder Include="Products\Queries\GetProductsByCurserForAllCategoriesQuery\" />
-    <Folder Include="Products\Queries\GetProductByIdQuery\" />
-    <Folder Include="Products\Queries\GetProductsByUserIdQuery\" />
-    <Folder Include="Products\Queries\GetImagesByProductIdQuery\" />
-    <Folder Include="Products\Queries\GetMyProductsQuery\" />
+    <Folder Include="Categories\Commands\UpdateCategory\" />
+    <Folder Include="Categories\Commands\CreateCategory\" />
+    <Folder Include="Categories\Queries\GetAllCategories\" />
+    <Folder Include="Categories\Queries\GetCategoryById\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Catalog_Service_Core\Catalog_Service_Core.csproj" />
   </ItemGroup>
 
 </Project>
