Fix Bugs | Update Messaging Functions & Shared Library

--- a/Catalog_Service_Application/Catalog_Service_Application.csproj
+++ b/Catalog_Service_Application/Catalog_Service_Application.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConstantsLib" Version="3.0.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.11" />
   </ItemGroup>
 
