--- a/Catalog_Service_API/appsettings.Development.json
+++ b/Catalog_Service_API/appsettings.Development.json
@@ -8,5 +8,9 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMQ": {
+    "Uri": "amqp://guest:guest@localhost:5672/",
+    "HostName": "localhost"
   }
 }
